--- a/personal-portfolio-webpage/styles.css
+++ b/personal-portfolio-webpage/styles.css
@@ -1,3 +1,80 @@
 @media only screen and (max-width: 1440px) {
   
 }
+
+/* flex containers */
+
+#welcome-section, #navbar,body, address, footer {
+    display: flex;
+}
+
+body {
+    margin: 0;
+    padding-top: 40px;
+    background-color:  rgb(250, 168, 179);
+    color: aliceblue;
+    flex-direction: column;
+}
+
+
+#navbar{
+    background-color: rgb(250, 168, 179);
+    text-align: end;
+    position: fixed;
+    top: 0px;
+    width: 100%;
+    height: 40px;
+    flex-direction: column;
+    justify-content: center;
+    font-weight: 700;
+}
+
+
+#welcome-section {
+    background-color: rgb(35, 35, 35);
+    height: 400px;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+}
+
+#projects {
+    background-color: rgb(238, 207, 211);
+}
+
+#link-list {
+    margin-right: 20px;
+}
+
+#link-list > a {
+    color: rgb(35, 35, 35);
+}
+
+#project-list {
+    display: grid ;
+}
+
+h1,h3 {
+    margin: 0;
+}
+
+footer {
+    background-color: rgb(35, 35, 35);
+    color: aliceblue;
+    height: 120px;
+}
+
+a {
+    text-decoration: none;
+    /* color: aliceblues */
+}
+
+address > a {
+    color: aliceblue;
+}
+
+img {
+    width: 100%;
+    max-width: 200px;
+}
